--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>
                     UsabilityHub is a remote user research platform that takes the guesswork out of design decisions 
                     by validating them with real users.
-                    
+                    jai baba ki.
                 </p>
                 <a href="#" class="primary-button get-started-button">Get started</a>
             </div>
